[package]
name = "bencheth"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = "0.4"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.18"
env_logger = "0.10.0"
reqwest = "0.11.18"
eyre = "0.6.8"
async-trait = "0.1.68"
thiserror = "1.0.40"
serde = "1.0.163"
tokio-stream = "0.1.14"
num_cpus = "1.15.0"
